--- a/src/GMLClient/frontClient/src/manager_index.html
+++ b/src/GMLClient/frontClient/src/manager_index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="jq.js"></script>
     <script type="text/javascript" src="interfaceExec.js"></script>
     <link rel="stylesheet" href="./layui/css/layui.css">
+    <link rel="stylesheet" href="./gml.css">
     <!-- 用户信息编辑的工具条 -->
     <script type="text/html" id="table_userlist_barDemo">
         <a class="layui-btn layui-btn-xs" lay-event="roleinfo_des" id="roleinfo_des">权限详细</a>
@@ -1003,7 +1004,24 @@
                 <div id="table_conditionList" lay-filter="table_conditionList"></div>
                 <div id="conditionList_limitBottomBar"></div>
             </div>
-            <div class="layui-tab-item">内容3</div>
+            <div class="layui-tab-item">
+                <div>
+                    <div>
+                        <div class="strategyTitleBar">
+                            <span>
+                                <span class="strategyTitleBar_title">1对1教室策略</span>
+                                <i class="layui-icon layui-icon-about" style="float: left;"></i>
+                                <span class="strategyTitleBar_btn">折叠</span>
+                                <span class="strategyTitleBar_btn">编辑策略类别</span>
+                                <span class="strategyTitleBar_btn">删除策略类别</span>
+                                <span class="strategyTitleBar_btn">新增策略类别</span>
+                            </span>
+                        </div>
+                        <div style="width: 100%;height:40px;background: #ff0000;clear:both;"></div>
+                    </div>
+                   
+                </div>
+            </div>
         </div>
     </div>
 
